--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+.app {
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    font-family: Montserrat, sans-serif;
+    display: flex;
+    justify-content: center;
+    background-color: navajowhite;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 30px;
+    width: 500px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.count {
+    border: 2px solid black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 200px;
+    height: 200px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.h1 {
+    font-size: 6rem;
+
+}
+.h1_wrong {
+    color: red;
+}
+.main_text{
+    font-size: 20px;
+    display: flex;
+
+    justify-content: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttons_container {
+    width: 80%;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.button-inc {
+    width: 140px;
+    font-size: 16px;
+    background-color: green;
+    border-radius: 8%;
+    padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-res {
+
+    background-color: red;
+
+
 }
+
+
+
+
